--- a/destinations/canyon.html
+++ b/destinations/canyon.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.svg" type="image/x-icon">
     <title>REC-OVERTOURISM</title>
 </head>
 <body>
@@ -30,12 +30,13 @@
         </div>
         
         <div class="actual-content">
+
             <div class="side-bar sb-left">
                 <a href="../destinations/boracay.html">
                     <div class="city-card">
                     Boracay - Philippines <br> <br>
-                    <span><div class="time">322 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    <span><div class="time">443 days</div> of waiting time </span> <br> 
+                    POLLUTION
                     </div>
                 </a>
                 <div class="line"></div>
@@ -53,7 +54,7 @@
                     <div class="city-card">
                     Dubrovnik - Croatia <br> <br>
                     <span><div class="time">525 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    RESIDENTS
                     </div>
                 </a>
                 <div class="line"></div>
@@ -62,7 +63,7 @@
                     <div class="city-card">
                     Fjadrargljufur canyon - Iceland <br> <br>
                     <span><div class="time">292 days</div> of waiting time </span> <br> 
-                    NATURE
+                    NATURAL
                     </div>
                 </a>
                 <div class="line"></div>
@@ -71,7 +72,7 @@
                     <div class="city-card">
                     Maya Bay - Thailand <br> <br>
                     <span><div class="time">283 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    NATURE
                     </div>
                 </a>
                 <div class="line"></div>
@@ -89,7 +90,7 @@
                     <div class="city-card">
                     Mallorca - Spain <br> <br>
                     <span><div class="time">87 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    RESIDENTS
                     </div>
                 </a>
                 <div class="line"></div>
@@ -98,7 +99,7 @@
                     <div class="city-card">
                     Santorini - Greece <br> <br>
                     <span><div class="time">96 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    SOCIAL MEDIA
                     </div>
                 </a>
                 <div class="line"></div>
@@ -107,7 +108,7 @@
                     <div class="city-card">
                     Venice - Italy <br> <br>
                     <span><div class="time">431 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    RESIDENTS
                     </div>
                 </a>
             </div>
