--- a/destinations/mallorca.html
+++ b/destinations/mallorca.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.svg" type="image/x-icon">
     <title>REC-OVERTOURISM</title>
 </head>
 <body>
@@ -34,8 +34,8 @@
                 <a href="../destinations/boracay.html">
                     <div class="city-card">
                     Boracay - Philippines <br> <br>
-                    <span><div class="time">322 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    <span><div class="time">443 days</div> of waiting time </span> <br> 
+                    POLLUTION
                     </div>
                 </a>
                 <div class="line"></div>
@@ -53,7 +53,7 @@
                     <div class="city-card">
                     Dubrovnik - Croatia <br> <br>
                     <span><div class="time">525 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    RESIDENTS
                     </div>
                 </a>
                 <div class="line"></div>
@@ -62,7 +62,7 @@
                     <div class="city-card">
                     Fjadrargljufur canyon - Iceland <br> <br>
                     <span><div class="time">292 days</div> of waiting time </span> <br> 
-                    NATURE
+                    NATURAL
                     </div>
                 </a>
                 <div class="line"></div>
@@ -70,7 +70,7 @@
                 <a href="../destinations/mayaB.html">
                     <div class="city-card">
                     Maya Bay - Thailand <br> <br>
-                    <span><div class="time">87 days</div> of waiting time </span> <br> 
+                    <span><div class="time">283 days</div> of waiting time </span> <br> 
                     NATURE
                     </div>
                 </a>
@@ -89,7 +89,7 @@
                     <div class="city-card">
                     Mallorca - Spain <br> <br>
                     <span><div class="time">87 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    RESIDENTS
                     </div>
                 </a>
                 <div class="line"></div>
@@ -98,7 +98,7 @@
                     <div class="city-card">
                     Santorini - Greece <br> <br>
                     <span><div class="time">96 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    SOCIAL MEDIA
                     </div>
                 </a>
                 <div class="line"></div>
@@ -107,11 +107,10 @@
                     <div class="city-card">
                     Venice - Italy <br> <br>
                     <span><div class="time">431 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    RESIDENTS
                     </div>
                 </a>
             </div>
-
             <div class="buttons flex-display-center-sb">
                 <div class="list-btn pointer animated-btn btn-text sans-regular flex-display-center-center">
                     Show list
@@ -122,7 +121,7 @@
 
             <div class="where"> 
             <span> Mallorca - Spain </span> <br>
-                ???
+                RESIDENTS
             </div>
             
             <div class="side-bar sb-right">
