--- a/pages/streams.html
+++ b/pages/streams.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="index.html" class="nav-title">REC-OVERTOURISM</a>
+        <a href="../index.html" class="nav-title">REC-OVERTOURISM</a>
     
         <div class="link-section">
             <div class="link link-1">
