--- a/destinations/dubrovnik.html
+++ b/destinations/dubrovnik.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.svg" type="image/x-icon">
     <title>REC-OVERTOURISM</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
 
     <div class="content-wrapper">
         <div class="video-wrapper flex-display-center-center">
-            <video class="player" src="../assets/videos/dubrovnik.mp4" alt="video" autoplay muted></video>
+            <video class="player" src="../assets/videos/dubrovnik.mp4" alt="video" autoplay muted loop></video>
         </div>
         
         <div class="actual-content">
@@ -34,8 +34,8 @@
                 <a href="../destinations/boracay.html">
                     <div class="city-card">
                     Boracay - Philippines <br> <br>
-                    <span><div class="time">322 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    <span><div class="time">443 days</div> of waiting time </span> <br> 
+                    POLLUTION
                     </div>
                 </a>
                 <div class="line"></div>
@@ -53,7 +53,7 @@
                     <div class="city-card">
                     Dubrovnik - Croatia <br> <br>
                     <span><div class="time">525 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    RESIDENTS
                     </div>
                 </a>
                 <div class="line"></div>
@@ -89,7 +89,7 @@
                     <div class="city-card">
                     Mallorca - Spain <br> <br>
                     <span><div class="time">87 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    RESIDENTS
                     </div>
                 </a>
                 <div class="line"></div>
@@ -98,7 +98,7 @@
                     <div class="city-card">
                     Santorini - Greece <br> <br>
                     <span><div class="time">96 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                    SOCIAL MEDIA
                     </div>
                 </a>
                 <div class="line"></div>
@@ -107,7 +107,7 @@
                     <div class="city-card">
                     Venice - Italy <br> <br>
                     <span><div class="time">431 days</div> of waiting time </span> <br> 
-                    HISTORIC
+                        RESIDENTS
                     </div>
                 </a>
             </div>
@@ -121,7 +121,7 @@
             </div>
 
             <div class="where"> 
-            <span> Dubrovnik - Croatia </span> <br>
+                <span> Dubrovnik - Croatia </span> <br>
                 RESIDENTS
             </div>
             
@@ -183,8 +183,11 @@
                     </div>
 
                     <div class="graph-wrapper">
-                        <div class="axes ax-x"></div>
-                        <div class="axes ax-y"></div>
+                        <div class="axes">
+                            <div class="axes ax-x"></div>
+                            <div class="axes ax-y"></div>
+                        </div>
+                        <div class="first-bar"></div>
                     </div>
                 </div>
 
