--- a/pages/map.html
+++ b/pages/map.html
@@ -32,7 +32,7 @@
                 <div class="city-card">
                 Boracay - Philippines <br> <br>
                 <span><div class="time">443 days</div> of waiting time </span> <br> 
-                HISTORIC
+                POLLUTION
                 </div>
             </a>
             <div class="line"></div>
@@ -50,7 +50,7 @@
                 <div class="city-card">
                 Dubrovnik - Croatia <br> <br>
                 <span><div class="time">525 days</div> of waiting time </span> <br> 
-                HISTORIC
+                RESIDENTS
                 </div>
             </a>
             <div class="line"></div>
@@ -68,7 +68,7 @@
                 <div class="city-card">
                 Maya Bay - Thailand <br> <br>
                 <span><div class="time">283 days</div> of waiting time </span> <br> 
-                HISTORIC
+                NATURE
                 </div>
             </a>
             <div class="line"></div>
@@ -86,7 +86,7 @@
                 <div class="city-card">
                 Mallorca - Spain <br> <br>
                 <span><div class="time">87 days</div> of waiting time </span> <br> 
-                HISTORIC
+                RESIDENTS
                 </div>
             </a>
             <div class="line"></div>
@@ -95,7 +95,7 @@
                 <div class="city-card">
                 Santorini - Greece <br> <br>
                 <span><div class="time">96 days</div> of waiting time </span> <br> 
-                HISTORIC
+                SOCIAL MEDIA
                 </div>
             </a>
             <div class="line"></div>
@@ -104,7 +104,7 @@
                 <div class="city-card">
                 Venice - Italy <br> <br>
                 <span><div class="time">431 days</div> of waiting time </span> <br> 
-                HISTORIC
+                RESIDENTS
                 </div>
             </a>
         </div>
