--- a/destinations/cinqueT.html
+++ b/destinations/cinqueT.html
@@ -146,7 +146,7 @@
                             Locations
                             <img src="../assets/down.svg" alt="arrow down" class="arrow-down">
                         </div>
-                        <div class="location-dropdown hidden">
+                        <div class="location-dropdown pointer hidden">
                             <div class="location-item location flex-display-center-sb">
                                 Boracay
                                 <img src="../assets/check.svg" alt="check" class="check">
