--- a/pages/simulator.html
+++ b/pages/simulator.html
@@ -123,11 +123,11 @@
                 <div class="waiting-time-big sans-bold" id="result-nmbr">
                     <!-- X days <span class="sans-regular">of waiting time for others!</span> -->
                 </div>
-                <div class="what-u-can-do underlined sans-regular pointer">See what you can do</div>
+                <a href="#good-practices" class="what-u-can-do underlined sans-regular pointer">See what you can do</a>
             </div>
         </div>
 
-        <div class="good-practices high-section flex-display-sb-center">
+        <div id="good-practices" class="good-practices high-section flex-display-sb-center">
             <div class="page-title sans-bold">Good practices to reduce the impact</div>
             <div class="card-wrapper flex-display-sb-center">
                 <div class="card">
@@ -151,6 +151,17 @@
                     <div class="nmbr sans-bold">4.</div>
                     <div class="txt-card sans-regular">Respect the locals and their communities. Residents are what make the location worthy</div>
                 </div>
+                <div class="card">
+                    <div class="tour-op-icon sans-regular">*</div>
+                    <div class="nmbr sans-bold">5.</div>
+                    <div class="txt-card sans-regular"> Take care of culture and traditions of the prople, even if they're commodities to tourists </div>
+                </div>
+                <div class="card">
+                    <div class="tour-op-icon sans-regular">*</div>
+                    <div class="nmbr sans-bold">6.</div>
+                    <div class="txt-card sans-regular"> Hire local people and plan tours also in remote areas, not so commonly visited by tourism </div>
+                </div>
+                <div class="tour-op-sig"> * tour operators</div>
             </div>
         </div>
 
@@ -166,13 +177,29 @@
         </div>
         
         <div class="why high-section flex-display-sb-center">
-            <div class="page-title sans-bold">Why <br> overtourism</div>
+            <div class="page-title sans-bold">The waiting <br> time</div>
             <div class="txt-explanation sans-regular">
-                Access to various locations in the last two years has been limited, and not only for health reasons. 
-                There are locations that had to close due to overtourism, fuelled by TV-shows, movies and Instagram 
-                posts, and not sustainable practices which eventually exceeded the foreseen <a href="https://en.wikipedia.org/wiki/Tourism_carrying_capacity" class="sans-bold underlined"> tourism carrying capacity</a>. 
-                Now these places need a certain amount of recovery time, without any tourists, and before reopening 
-                different policies are being enforced to limit the amount of visitors and to shelter the ecosystem.
+                Once such policies will be enforced the number of tourists will pile up and there will be a <span class="sans-bold">waiting list</span> to be able to access a certain location. 
+                This, to allow a better recovery from the different types of <span class="sans-bold">damages done</span>:
+
+                <div class="damages-wrapper flex-display-center-sb">
+                    <div class="damage">HISTORIC</div>
+                    <div class="damage">NATURE</div>
+                    <div class="damage">RESIDENTS</div>
+                    <div class="damage">POLLUTION</div>
+                    <div class="damage">SOCIAL MEDIA</div>
+                </div>
+                <div class="inner-expl">
+                    The waiting time has been calculated based on different factors such as the <span class="sans-bold">tourism carrying capacity</span>, <span class="sans-bold">number of residents</span> and <span class="sans-bold">number of yearly tourists</span>.
+                    This time has then been converted into other units of time that the user <span class="sans-bold">could better relate to</span>.
+                </div>
+                <div class="waiting-time-big sans-bold">
+                    443 days <span>of waiting time</span>
+                    <div class="comparison-data">
+                        <div class="mono-bold">Enough time to:</div>
+                        Walk twice the world's longest route and still have 69&nbspdays&nbspspare
+                    </div>
+                </div>
             </div>
         </div>
 
