--- a/pages/streams.html
+++ b/pages/streams.html
@@ -31,8 +31,8 @@
                     <video class="player-single-str" src="../assets/videos/boracay.mp4" autoplay loop muted></video>
                 </div>
                 <div class="stream-info flex-display-sa-start column">
-                    <div class="location-name">Boracay</div>
-                    <div class="waiting-time-big sans-bold">
+                    <div class="location-name hidden">Boracay</div>
+                    <div class="waiting-time-big sans-bold hidden">
                         443 days <br> <span>of waiting time</span>
                     </div>
                 </div>
@@ -43,8 +43,8 @@
                 <video class="player-single-str" src="../assets/videos/no.mp4" autoplay loop muted></video>
             </div>
             <div class="stream-info flex-display-sa-start column">
-                <div class="location-name">Fjadrargljufur Canyon</div>
-                <div class="waiting-time-big sans-bold">
+                <div class="location-name hidden">Fjadrargljufur Canyon</div>
+                <div class="waiting-time-big sans-bold hidden">
                     292 days <br> <span>of waiting time</span>
                 </div>
             </div>
@@ -55,8 +55,8 @@
                 <video class="player-single-str" src="../assets/videos/cinqueT.mp4" autoplay loop muted></video>
             </div>
             <div class="stream-info flex-display-sa-start column">
-                <div class="location-name">Cinque Terre</div>
-                <div class="waiting-time-big sans-bold">
+                <div class="location-name hidden">Cinque Terre</div>
+                <div class="waiting-time-big sans-bold hidden">
                     243 days <br> <span>of waiting time</span>
                 </div>
             </div>
@@ -67,8 +67,8 @@
                 <video class="player-single-str" src="../assets/videos/dubrovnik.mp4" autoplay loop muted></video>
             </div>
             <div class="stream-info flex-display-sa-start column">
-                <div class="location-name">Dubrovnik</div>
-                <div class="waiting-time-big sans-bold">
+                <div class="location-name hidden">Dubrovnik</div>
+                <div class="waiting-time-big sans-bold hidden">
                     525 days <br> <span>of waiting time</span>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                 <video class="player-single-str" src="../assets/videos/no.mp4" autoplay loop muted></video>
             </div>
             <div class="stream-info flex-display-sa-start column">
-                <div class="location-name">Machu Pichu</div>
-                <div class="waiting-time-big sans-bold">
+                <div class="location-name hidden">Machu Pichu</div>
+                <div class="waiting-time-big sans-bold hidden">
                     235 days <br> <span>of waiting time</span>
                 </div>
             </div>
@@ -91,8 +91,8 @@
                 <video class="player-single-str" src="../assets/videos/mallorca.mp4" autoplay loop muted></video>
             </div>
             <div class="stream-info flex-display-sa-start column">
-                <div class="location-name">Mallorca</div>
-                <div class="waiting-time-big sans-bold">
+                <div class="location-name hidden">Mallorca</div>
+                <div class="waiting-time-big sans-bold hidden">
                     87 days <br> <span>of waiting time</span>
                 </div>
             </div>
@@ -103,8 +103,8 @@
                 <video class="player-single-str" src="../assets/videos/mayaB.mp4" autoplay loop muted></video>
             </div>
             <div class="stream-info flex-display-sa-start column">
-                <div class="location-name">Maya Bay</div>
-                <div class="waiting-time-big sans-bold">
+                <div class="location-name hidden">Maya Bay</div>
+                <div class="waiting-time-big sans-bold hidden">
                     283 days <br> <span>of waiting time</span>
                 </div>
             </div>
@@ -115,8 +115,8 @@
                 <video class="player-single-str" src="../assets/videos/santorini.mp4" autoplay loop muted></video>
             </div>
             <div class="stream-info flex-display-sa-start column">
-                <div class="location-name">Santorini</div>
-                <div class="waiting-time-big sans-bold">
+                <div class="location-name hidden">Santorini</div>
+                <div class="waiting-time-big sans-bold hidden">
                     96 days <br> <span>of waiting time</span>
                 </div>
             </div>
@@ -127,8 +127,8 @@
                 <video class="player-single-str" src="../assets/videos/venice.mp4" autoplay loop muted></video>
             </div>
             <div class="stream-info flex-display-sa-start column">
-                <div class="location-name">Venice</div>
-                <div class="waiting-time-big sans-bold">
+                <div class="location-name hidden">Venice</div>
+                <div class="waiting-time-big sans-bold hidden">
                     431 days <br> <span>of waiting time</span>
                 </div>
             </div>
