--- a/pages/simulator.html
+++ b/pages/simulator.html
@@ -191,7 +191,7 @@
                 </div>
                 <div class="inner-expl">
                     The waiting time has been calculated based on different factors such as the <span class="sans-bold">tourism carrying capacity</span>, <span class="sans-bold">number of residents</span> and <span class="sans-bold">number of yearly tourists</span>.
-                    This time has then been converted into other units of time that the user <span class="sans-bold">could better relate to</span>.
+                    This time has then been converted into other units of time that the user <span class="sans-bold">could better relate to</span>:
                 </div>
                 <div class="waiting-time-big sans-bold">
                     443 days <span>of waiting time</span>
